# Lens

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  README.md  REQUIREMENTS.md  lens.config.yaml  pyproject.toml
.github/: copilot-instructions.md
src/lens/: __init__.py  __main__.py  _explorer_template.py  cli.py  config.py  copilot_integration.py  graph.py  hooks.py  ingest.py  models.py  pipeline.py  query.py  render.py
src/lens/extract/: concepts.py  syntax.py
tests/: test_config.py  test_copilot_integration.py  test_extract_concepts.py  test_extract_syntax.py  test_graph.py  test_hooks.py  test_ingest.py  test_language_extraction.py  test_models.py  test_pipeline.py  test_query.py  test_render.py
